--- a/style.css
+++ b/style.css
@@ -15,7 +15,17 @@
 #flexwrap {
   display: flex;
 }
-
+.box {
+  grid-column: 2 / span 4;
+  grid-row: 1 / SPAN 3;
+  width: 80vw;
+  height: 100px;
+  border: solid 5px #000;
+  border-color: #000 transparent transparent transparent;
+  border-radius: 50%/100px 100px 0 0;
+  z-index: 0;
+  transform: rotateX(180deg);
+}
 #bodyimage {
   flex-basis: 20%;
   max-height: auto;
@@ -94,7 +104,7 @@ header {
 
   grid-column: 2 / span 4;
   grid-row: 4 / span 2;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 5rem;
 }
 h3 {
